--- a/android/build.gradle
+++ b/android/build.gradle
@@ -53,10 +53,10 @@ dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compileOnly 'com.facebook.react:react-native:+'
 
-    androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
+    androidTestImplementation('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
-    testCompile 'junit:junit:4.12'
+    testImplementation 'junit:junit:4.12'
 }
 
 
